DEPLOY/K3S/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tk-ai-crm-api
  namespace: tk-ai-crm
spec:
  rules:
    - host: tk-ai-crm.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tk-ai-crm-api
                port:
                  number: 8000
